_sass/2-sections/_projects.sass
.sub-nav-chicken
  background-color: $bgcolor

.sub-nav-pig
  background-color: #E67D20

.sub-nav-house
  background-color: #E6BF20

.sub-nav
  height: 80px
  margin: 0 auto

  h2
    font-family: 'DIN Offc Pro', sans-serif
    text-transform: uppercase
    letter-spacing: 0.10em
    margin: -10px auto 5px auto

  .big-title
    min-width: 275px
    font:
      size: 26px
      weight: 500

  .small-title
    font:
      size: 18px
      weight: 500

  .chicken-title
    color: $bgcolor

  .pig-title
    color: #E67D20

  .house-title
    color: #E6BF20

.sub-nav-lockup
  margin: 0 auto
  text-align: center
  +display(flex)
  +align-items(bottom)
  +justify-content(space-around)

.nav-col
  margin-top: 40px
  width: 100%

.small-icon
  +size(68px)

.big-icon
  margin-top: -45px
  +size(168px)

.project-page
  background-color: #EAEAEA
  padding-bottom: 80px

.project-content
  margin: 120px auto auto auto
  padding: 0 25px 0 25px
  text-align: center
  max-width: 900px

  h3
    font-family: 'DIN Offc Pro', sans-serif
    text-transform: uppercase
    letter-spacing: 0.10em
    margin-top: 0
    font:
      size: 18px
      weight: 500

  ul
    list-style-type: none

  svg
    margin-right: 3px
    vertical-align: middle

    path
      fill: black

.project-images
  margin: 0 auto
  text-align: center
  max-width: 800px

@media (max-width: 700px)
  .nav-col-small
    display: none

